# test

./: PKGBULD  README.md  more esay.txt  userChrome.css
hpm-main/hpm-main/: PKGBUILD  README.md  cmd.md  diagram.txt
hpm-main/hpm-main/hpm/: README.md  diagram.txt  main.py  pyproject.toml  requirements.txt
hpm-main/hpm-main/hpm/LICENSE/: LICENSE
hpm-main/hpm-main/hpm/assets/: banner.txt
hpm-main/hpm-main/hpm/hpm/: cli.py  config.py  constants.py  i18n.py  install.py  pacman.py
hpm-main/hpm-main/hpm/hpm/commands/: alias.py  aur.py  clean.py  doctor.py  history_command.py  info.py  install.py  list_command.py  orphans.py  refresh.py  remove.py  search.py  sync.py  upgrade.py
hpm-main/hpm-main/hpm/hpm/utils/: config.py  early_args_patch.py  history.py  log.py  pacman.py  safety.py
myFiles/: PKGBUILD  pyproject.toml
